--- a/menu/static/menu/css/menu.css
+++ b/menu/static/menu/css/menu.css
@@ -52,6 +52,10 @@
     transition: all 0.3s ease-in-out;
 }
 
+.menu-images {
+    max-height: 400px;
+}
+
 @media screen and (min-width: 768px) {
     .back-to-top-btn {
         top: 80%;
