--- a/menu/templates/menu/menu_item_detail.html
+++ b/menu/templates/menu/menu_item_detail.html
@@ -44,7 +44,7 @@
                             <p><strong>Portion:</strong></p>
                             <select class="form-control rounded-0 w-50" name="portion_size" id='id_portion_size'>
                                 <option value="i">Individual</option>
-                                <option value="m" selected>Meal (side & drink + €5)</option>
+                                <option value="m" selected>Meal (chips & drink + €4)</option>
                             </select>
                         </div>
                         {% endif %}
@@ -53,7 +53,7 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-orange text-white rounded-0"
+                                        <button class="decrement-qty btn btn-orange border text-white rounded-0"
                                             data-item_id="{{ menu_item.id }}" id="decrement-qty_{{ menu_item.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
@@ -64,7 +64,7 @@
                                         min="1" max="20" data-item_id="{{ menu_item.id }}"
                                         id="id_qty_{{ menu_item.id }}">
                                     <div class="input-group-prepend">
-                                        <button class="increment-qty btn btn-orange text-white rounded-0"
+                                        <button class="increment-qty btn btn-orange border text-white rounded-0"
                                             data-item_id="{{ menu_item.id }}" id="increment-qty_{{ menu_item.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
