--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -3,9 +3,9 @@
     <div class="w-100 toast-capper bg-warning"></div>
     <div class="toast-header w-100 d-flex justify-content-between">
         <strong class="mr-auto text-white">Error!</strong>
-        <button type="button" class="btn btn-outline-danger ml-auto mb-1 close" data-dismiss="toast"
+        <button type="button" class="btn btn-outline-danger ml-auto mb-1 close" data-bs-dismiss="toast"
             aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true"><i class="fa-solid fa-xmark"></i></span>
         </button>
     </div>
     <div class="toast-body">
