--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -3,8 +3,8 @@
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header w-100 d-flex justify-content-between">
         <strong class="mr-auto text-white">Success!</strong>
-        <button type="button" class="btn btn-outline-success ml-auto mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn btn-outline-success ml-auto mb-1 close" data-bs-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true"><i class="fa-solid fa-xmark"></i></span>
         </button>
     </div>
     <div class="toast-body">
