Added cart message for menu items to appear in toast if success

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -78,7 +78,7 @@
                             </form>
                                 <a class="btn update-link text-info"
                                     id="update_{{food.food_id}}"><small>Update</small></a>
-                                <a class="btn remove-item text-danger"
+                                <a class="btn remove-item text-danger float-end"
                                     id="remove_{{ food.food_id }}"
                                     data-portion_size="{{ food.portion_size }}"><small>Remove</small></a>
                         </td>
