--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -8,6 +8,6 @@
         </button>
     </div>
     <div class="toast-body">
-        {{ message }}
+        {% include 'includes/toasts/toast-menu-item.html' %}
     </div>
 </div>
