--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -96,13 +96,13 @@
                     </tr>
                     <tr>
                         <td colspan="5" class="text-right">
-                            <a href="{% url 'menu' %}" class="btn btn-outline-dark rounded btn-lg">
+                            <a href="{% url 'menu' %}" class="btn btn-outline-dark rounded-0 btn-lg">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <a href="" class="btn btn-orange text-white rounded mt-xs-2 mt-md-0 btn-lg border">
+                            <a href="{% url 'checkout' %}" class="btn btn-orange text-white rounded-0 mt-xs-2 mt-md-0 btn-lg border">
                                 <span class="text-uppercase">Secure Checkout</span>
                                 <span class="icon">
                                     <i class="fas fa-lock"></i>
