Added stripe element and tested stripe calls

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -65,7 +65,7 @@
                 {% endif %}
 
             </ul>
-            <ul class="w-100 navbar-nav d-none d-lg-flex justify-content-end mx-4">
+            <ul class="w-75 navbar-nav d-none d-lg-flex justify-content-center">
                 <li class="nav-link mx-1">
                     <form class="dropdown" method="GET" action="{% url 'menu' %}">
                         {% csrf_token %}
