--- a/templates/base.html
+++ b/templates/base.html
@@ -75,6 +75,7 @@
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/menu.js' %}"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     {% block extra_js %}{% endblock extra_js %}
 </body>
 
