--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -126,10 +126,10 @@
         </div>
     </div>
 </div>
-{{ stripe_public_key|json_script:"id_stripe_public_key"}}
-{{ client_secret|json_script:"id_client_secret"}}
 {% endblock %}
-{% block extra_js %}
+{% block postloadjs %}
+{{ block.super }}
+{{ stripe_public_key|json_script:"id_stripe_public_key" }}
+{{ client_secret|json_script:"id_client_secret" }}
 <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
-
-{% endblock extra_js %}
+{% endblock %}
