--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,7 @@
     <script src="{% static 'js/menu.js' %}"></script>
     <script src="https://js.stripe.com/v3/"></script>
     {% block extra_js %}{% endblock extra_js %}
+    {% block postloadjs %}{% endblock postloadjs%}
 </body>
 
 </html>
