--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -34,6 +34,16 @@
     border: 1px solid var(--onyx);
 }
 
+select,
+select option {
+    color: #000000;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
+
 .bg-orange {
     background-color: var(--yellow-orange-color-wheel);
 }
