--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,13 +5,65 @@
 {% endblock %}
 {% block head_title %} Profile {% endblock head_title %}
 {% block content %}
-<div class="overlay"></div>
-<div class="container">
-    <div class="row">
+<div class="container mt-5 bg-light">
+    <div class="row mt-5">
         <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">My Profile</h2>
+            <h2 class="">My Profile</h2>
             <hr>
         </div>
     </div>
-    {% endblock %}
+    <div class="row">
+        <div class="col-sm-12 col-md-5">
+            <h4 class="mx-2">Your details</h4>
+            <form action="{% url 'profile' %}" id="profile-update-form" method="POST">
+                {% csrf_token %}
+                <div>
+                    {{profile_form|crispy}}
+                </div>
+                <button type="submit" class="btn btn-orange text-white rounded-0 w-100 mb-2 border">Update
+                    Information</button>
+            </form>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <h4>Order History</h4>
+            <div class="order-history table-responsive">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr>
+                            <th>Order Number</th>
+                            <th>Date</th>
+                            <th>Items</th>
+                            <th>Order Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                        <tr>
+                            <td>
+                                <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
+                                    {{ order.order_number|truncatechars:6 }}
+                                </a>
+                            </td>
+                            <td>{{ order.date }}</td>
+                            <td>
+                                <ul class="list-unstyled">
+                                    {% for item in order.lineitems.all %}
+                                    <li class="small">
+                                        {% if item.product.has_sizes %}
+                                        Size {{ item.product.size|upper }}
+                                        {% endif %}{{ item.product.name }} x{{ item.quantity }}
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                            <td>€{{ order.grand_total }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock content %}
