--- a/menu/static/menu/css/menu.css
+++ b/menu/static/menu/css/menu.css
@@ -56,6 +56,11 @@
     max-height: 400px;
 }
 
+label {
+    color: var(--matte-black);
+    display: inline !important;
+}
+
 @media screen and (min-width: 768px) {
     .back-to-top-btn {
         top: 80%;
