--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -33,7 +33,7 @@
                         {% if food.menu_item.image %}
                         <img class="w-100 img-fluid" src="{{ food.menu_item.image.url }}" alt="{{ food.menu_item.name }}">
                         {% else %}
-                        <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ food.name }}">
+                        <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ food.menu_item.name }}">
                         {% endif %}
                     </a>
                 </div>
