--- a/templates/includes/toasts/toast-menu-item.html
+++ b/templates/includes/toasts/toast-menu-item.html
@@ -14,7 +14,7 @@
             <img class="w-100" src="{{ food.menu_item.image.url }}" alt="{{ food.menu_item.name }}">
             {% else %}
             <img class="w-100" src="{{ MEDIA_URL }}noimage.webp" alt="{{ food.menu_item.name }}">
-            {%%}
+            {% endif %}
         </div>
         <div class="col-9">
             <p class="my-0"><strong>{{ food.menu_item.name }}</strong></p>
