Added small changes to links throughout website

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -70,7 +70,7 @@
             <div class="col-sm-12 col-md-4 offset-md-4 text-center">
                 <h1 class="headings">FineChop</h1>
                 <h2 class="headings">Order Online</h2>
-                <button class="btn btn-orange rounded-0 text-white w-100">Browse Menu</button>
+                <a href="{% url 'menu' %}" class="btn btn-orange rounded-0 text-white w-100" aria-label="click here to go the food menu">Browse Menu</a>
             </div>
 
         </div>
@@ -84,19 +84,14 @@
                 <div id="reviews" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua.  Excepteur
-                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                est laborum" - <strong>Username</strong></p>
+                            <p>"Best place I ever went.." - <strong>John Murphy</strong></p>
                         </div>
                         <div class="carousel-item">
-                            <p> "Ut enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo consequat" - <strong>Username</strong></p>
+                            <p> "Fantastic establishment" - <strong>Patty Ryan</strong></p>
                         </div>
                         <div class="carousel-item">
-                            <p>"Duis aute irure dolor in
-                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur" -
-                                <strong>Username</strong></p>
+                            <p>"Best Asian food in the area!" -
+                                <strong>Tim Burke</strong></p>
                         </div>
                     </div>
                 </div>
