--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -46,7 +46,7 @@
                         </a>
                         <ul class="dropdown-menu shadow mt-2" aria-labelledby="account-dropdown">
                             <li>
-                                <a class="dropdown-item" href="#!">Book a Table</a>
+                                <a class="dropdown-item" href="{% url 'reservations' %}" aria-label="create a reservation">Book a Table</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#!">Buy Gift Card</a>
