--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -58,8 +58,12 @@
                 <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
                         aria-label="Click here to submit an application for a role at FineChop">Jobs</a>
                 </li>
-                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                <li><a class="text-decoration-none" href="{% static 'txt/privacy_policy.txt' %}" target="_blank"
+                        rel="noopener"
                         aria-label="Click to view privacy policy">Privacy Policy</a>
+                </li>
+                <li><a class="text-decoration-none" href="{% static 'txt/terms-and-conditions.txt' %}" target="_blank" rel="noopener"
+                        aria-label="Click to view terms and conditions">Terms & Conditions</a>
                 </li>
                 <li>
                     <p class="w-100">&copy; Created by <strong><a class="text-decoration-none copyright"
