--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -29,7 +29,7 @@
             {% for food in cart_items %}
             <div class="row border my-1 mx-2">
                 <div class="col-2 mb-1">
-                    <a href="{% url 'item_details' food.menu_item.name food.menu_item.id %}">
+                    <a href="{% url 'item_details' food.menu_item.id %}">
                         {% if food.menu_item.image %}
                         <img class="w-100 img-fluid" src="{{ food.menu_item.image.url }}" alt="{{ food.menu_item.name }}">
                         {% else %}
@@ -87,8 +87,9 @@
                             checked>
                         {% else %}
                         <label class="form-check-label" for="id-save-info">
-                            <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
-                            <a class="text-info" href="{% url 'account_login' %}">login</a> to save this information
+                            <a class="text-info" href="{% url 'account_signup' %}" aria-label="click here to sign up">Create an account</a> or
+                            <a class="text-info" href="{% url 'account_login' %}"
+                                aria-label="click here to sign in">login</a> to save this information
                         </label>
                         {% endif %}
                     </div>
@@ -105,7 +106,8 @@
                 </fieldset>
 
                 <div class="submit-button text-right mt-5 mb-2">
-                    <a href="{% url 'view_cart' %}" class="btn btn-outline-dark rounded-0">
+                    <a href="{% url 'view_cart' %}" class="btn btn-outline-dark rounded-0"
+                        aria-label="click here to view your cart">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
