--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,8 +15,8 @@
 </div>
 <div class="home-content">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-6 border-right d-flex nowrap flex-column justify-content-center">
+        <div class="row mt-3">
+            <div class="col-sm-12 col-lg-6 border-right d-flex nowrap flex-column justify-content-center mt-4">
                 <h1 class="headings text-center m-0">View our menu</h1>
                 <h2 class="text-center m-0">Order Online</h2>
                 <a href="{% url 'menu' %}" class="text-white text-center w-100 m-0" aria-label="Click here to go to the main food menu">
@@ -46,7 +46,7 @@
 <div class="bg-gradient py-2">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-7 offset-md-1 pt-5">
+            <div class="col-xs-12 col-md-7 offset-md-1 py-5">
             <h1 class="w-100 text-center">Subscribe for the latest News and Offers</h1>
             <form method="POST" action="{% url 'subscribe' %}">
                 {% csrf_token %}
