--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,79 +2,81 @@
 {% block content%}
 {% comment %} Footer {% endcomment %}
 <div class="container-fluid mt-auto footer-wrapper">
-<footer class="container mt-auto py-5">
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
-            <img src="{% static 'img/design/logo-no-background.svg' %}" alt="FineChop brand logo" class="footer-logo"
-                height="80">
-            <div class="footer-links my-4">
-                <ul class="col-12 social-links p-0">
-                    <li class="mx-1">
-                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener"
-                            aria-label="Click here to go to our Facebook page"><i class="
+    <footer class="container mt-auto py-5">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
+                <img src="{% static 'img/design/logo-no-background.svg' %}" alt="FineChop brand logo"
+                    class="footer-logo" height="80">
+                <div class="footer-links my-4">
+                    <ul class="col-12 social-links p-0">
+                        <li class="mx-1">
+                            <a href="https://www.facebook.com/" class="text-decoration-none mx-2" target="_blank"
+                                rel="noopener" aria-label="Click here to go to our Facebook page"><i class="
                 fa-brands fa-facebook-f"></i></a></li>
-                    <li class="mx-1">
-                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener"
-                            aria-label="Click here to go to our Instagram page"><i class="
+                        <li class="mx-1">
+                            <a href="https://www.instagram.com/" class="text-decoration-none mx-2" target="_blank"
+                                rel="noopener" aria-label="Click here to go to our Instagram page"><i class="
                 fa-brands fa-instagram"></i></a></li>
-                    <li class="mx-1">
-                        <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener"
-                            aria-label="Click here to go to our Twitter page"><i class="fa-brands fa-twitter"></i></a>
+                        <li class="mx-1">
+                            <a href="https://www.twitter.com/" class="text-decoration-none mx-2" target="_blank"
+                                rel="noopener" aria-label="Click here to go to our Twitter page"><i
+                                    class="fa-brands fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <p class="text-justify"><strong>FineChop</strong> has the pleasure of serving popular and authentic
+                    Asian
+                    dishes. We aim to bring
+                    you the best meals whether you order online or dine in.</p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mt-4">
+                <h1 class="fs-4">Support</h1>
+                <ul>
+                    <li><a class="text-decoration-none" href="tel:0209126583" target="_blank" rel="noopener"
+                            aria-label="Click here to call FineChop"><i class="fa-solid fa-phone mx-2"></i>
+                            020-912-6583</a>
+                    </li>
+                    <li><a class="text-decoration-none" href="mailto://info@finechop.ie" target="_blank" rel="noopener"
+                            aria-label="Click here to call FineChop"><i class="fa-solid fa-envelope mx-2"></i>
+                            info@finechop.ie</a>
+                    </li>
+                    <li><a class="text-decoration-none" href="{% url 'contact_us' %}"
+                            aria-label="Click here to view methods of contacting us"><i
+                                class="fa-solid fa-file-signature mx-2"></i>Contact Us</a>
                     </li>
                 </ul>
             </div>
-            <p class="text-justify"><strong>FineChop</strong> has the pleasure of serving popular and authentic Asian
-                dishes. We aim to bring
-                you the best meals whether you order online or dine in.</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mt-4">
-            <h1 class="fs-4">Support</h1>
-            <ul>
-                <li><a class="text-decoration-none" href="tel:0209126583" target="_blank" rel="noopener"
-                        aria-label="Click here to call FineChop"><i class="fa-solid fa-phone mr-2"></i>
-                        020-912-6583</a>
-                </li>
-                <li><a class="text-decoration-none" href="mailto://" target="_blank" rel="noopener"
-                        aria-label="Click here to call FineChop"><i class="fa-solid fa-envelope mr-2"></i>
-                        put
-                        email
-                        here</a>
-                </li>
-                <li><a class="text-decoration-none mx-4" href="#" target="_blank" rel="noopener"
-                        aria-label="Click here to view methods of contacting us">Contact Us</a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 mb-5">
-            <h1 class="fs-4">Info</h1>
-            <ul class="mt-3">
-                <li><a class="text-decoration-none" href="{% url 'about' %}" target="_blank" rel="noopener"
-                        aria-label="Click here to discover how we built this business in the about section">About
-                        Us</a>
-                </li>
-                <li><a class="text-decoration-none" href="{% url 'menu' %}" target="_blank" rel="noopener"
-                        aria-label="Click here to view our menu">Menu</a>
-                </li>
-                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
-                        aria-label="Click here to submit an application for a role at FineChop">Jobs</a>
-                </li>
-                <li><a class="text-decoration-none" href="{% static 'txt/privacy_policy.txt' %}" target="_blank"
-                        rel="noopener"
-                        aria-label="Click to view privacy policy">Privacy Policy</a>
-                </li>
-                <li><a class="text-decoration-none" href="{% static 'txt/terms-and-conditions.txt' %}" target="_blank" rel="noopener"
-                        aria-label="Click to view terms and conditions">Terms & Conditions</a>
-                </li>
-                <li>
-                    <p class="w-100">&copy; Created by <strong><a class="text-decoration-none copyright"
-                                href="https://github.com/KristianColville1" target="_blank" rel="noopener" aria-label="Click here to view Kristian Colville GitHub
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 mb-5">
+                <h1 class="fs-4">Info</h1>
+                <ul class="mt-3">
+                    <li><a class="text-decoration-none" href="{% url 'about' %}"
+                            aria-label="Click here to discover how we built this business in the about section">About
+                            Us</a>
+                    </li>
+                    <li><a class="text-decoration-none" href="{% url 'menu' %}"
+                            aria-label="Click here to view our menu">Menu</a>
+                    </li>
+                    <li><a class="text-decoration-none" href="{% url 'careers' %}"
+                            aria-label="Click here to submit an application for a role at FineChop">Jobs</a>
+                    </li>
+                    <li><a class="text-decoration-none" href="{% url 'privacy_policy' %}"
+                            aria-label="Click to view privacy policy">Privacy Policy</a>
+                    </li>
+                    <li><a class="text-decoration-none" href="{% url 'terms_and_conditions' %}"
+                            aria-label="Click to view terms and conditions">Terms &
+                            Conditions</a>
+                    </li>
+                    <li>
+                        <p class="w-100">&copy; Created by <strong><a class="text-decoration-none copyright"
+                                    href="https://github.com/KristianColville1" target="_blank" rel="noopener"
+                                    aria-label="Click here to view Kristian Colville GitHub
                         profile">Kristian Colville <i class="fa-brands fa-github"></i></a>
-                        </strong></p>
-                </li>
-            </ul>
+                            </strong></p>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </div>
 
 {% endblock %}
